--- a/quiz.css
+++ b/quiz.css
@@ -33,7 +33,7 @@ body{
     max-width: 600px;
     margin: 30px auto;
     border: 2px solid var(--button-color);
-    padding: 30px 30px; 
+    padding: 30px; 
 
 }
 
@@ -64,8 +64,15 @@ form label{
 }
 
 @media (max-width:431px){
+
     .quizz-container{
-        max-width: 400px;
+        margin: 10px auto;
+        padding: 10px;
+        max-width: 350px;
+    }
+
+    .heading{
+        margin: 10px auto;
     }
 }
 
